fixed overflow for sections

--- a/src/components/contactSection/contactSection.scss
+++ b/src/components/contactSection/contactSection.scss
@@ -1,7 +1,7 @@
 @import "../../index.scss";
 
 .contact-section {
-  padding-top: 100px;
+  padding: 100px 30px 0 30px;
   margin-bottom: 160px;
 
   .contact-heading {
