--- a/src/components/projectsSection/projectsSection.scss
+++ b/src/components/projectsSection/projectsSection.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     margin: 0 0 100px 0;
+    padding: 0 30px;
 
     .projects-header {
       margin: 0;
@@ -93,6 +94,7 @@
   }
 
   .project-list {
+    padding: 0 30px;
     display: flex;
     flex-direction: column;
     gap: 100px;
